--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -13,6 +13,7 @@
       <li><a href="/ejercicios/call-apply-bind.html">Call, Apply y Bind</a></li>
       <li><a href="/ejercicios/prototype.html">Prototype</a></li>
       <li><a href="/ejercicios/herencia-prototipal.html">Herencia Prototipal</a></li>
+      <li><a href="/ejercicios/promises.html">Promises</a></li>
     </ol>
   </body>
 </html>
