--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -14,6 +14,9 @@
       <li><a href="/ejercicios/prototype.html">Prototype</a></li>
       <li><a href="/ejercicios/herencia-prototipal.html">Herencia Prototipal</a></li>
       <li><a href="/ejercicios/promises.html">Promises</a></li>
+      <li><a href="/ejercicios/proxy.html">Proxi</a></li>
+      <li><a href="/ejercicios/generators.html">Generators</a></li>
+      <li><a href="/ejercicios/abort-fetch.html">Abort Fetch</a></li>
     </ol>
   </body>
 </html>
