--- a/index.html
+++ b/index.html
@@ -19,8 +19,30 @@
         <source src="./assets/BigBuckBunny.mp4" />
       </video>
 
-      <button>Play/Pause</button>
+      <button id="playButton">Play/Pause</button>
+      <button id="muteButton">Mute/Unmute</button>
     </main>
+
+    <section>
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae, ullam suscipit perspiciatis cum quas consequuntur natus? Dolorem voluptatum odit tenetur provident fugiat nam praesentium labore, saepe reiciendis eum atque!</li>        
+      </ul>
+    </section>
 
     <script type="module" src="/assets/index.js"></script>
   </body>
