--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
       </ul>
     </section>
 
-    <script type="module" src="/assets/index.js"></script>
+    <script type="module" src="/assets/index.ts"></script>
   </body>
 </html>
